# hack_ekb

./: README.md  main copy.ipynb  main.py  test.ipynb  test_metric.txt  tmp.txt  train copy.ipynb  train.ipynb  utils.py  valid_class.ipynb  valid_regres_mae.ipynb
trash/valid/: main.ipynb  valid_class.ipynb  valid_regres.ipynb
valid/: readme.md
web/: README.md  pyproject.toml
web/web/: main.py  model.py
web/web/models/: file_entry.py  files.py
weights/: models.pkl
