[tool.poetry]
name = "hack"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.23.1"
watchdog = "^3.0.0"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
catboost = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
